--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "@nuxt/ui": "^3.0.2",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
+    "dayjs": "^1.11.13",
     "eslint": "^9.24.0",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
