--- a/compose.yaml
+++ b/compose.yaml
@@ -15,27 +15,27 @@ services:
       POSTGRES_USER: software
       POSTGRES_DB: software
 
-#  api:
-#    build:
-#      context: ./api
-#      dockerfile: Dockerfile
-#    depends_on:
-#      - db
-#    ports:
-#      - "8080:8080"
-#    hostname: localhost
-#    environment:
-#      DATABASE_HOST: db
-#      DATABASE_PORT: 5432
-#      DATABASE_USER: software
-#      DATABASE_PASSWORD: software
-#      DATABASE_NAME: software
-#
-#  webapp:
-#    build:
-#      context: ./webapp
-#      dockerfile: Dockerfile
-#    ports:
-#      - "3000:3000"
-#    depends_on:
-#      - api
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    hostname: localhost
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      DATABASE_USER: software
+      DATABASE_PASSWORD: software
+      DATABASE_NAME: software
+
+  webapp:
+    build:
+      context: ./webapp
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - api
